test_cases/pass/p18.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 0)
START IF
    IF (x > 3)
    START IF
        IF (x > 4)
        START IF
            PRINT: "deep three"
        END IF
    END IF
END IF
END SCRIPT
