test_cases/fail/f54.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF (x > 3)
START IF
    BREAK
END IF
END SCRIPT